@@ -9,16 +9,20 @@ PMELF_SRCS =symname.c secname.c dmpgrps.c
 PMELF_SRCS+=strm.c mstrm.c fstrm.c
 PMELF_SRCS+=dmpsym.c dmpsymtab.c
 PMELF_SRCS+=dmpshdr.c dmpshtab.c
+PMELF_SRCS+=dmprels.c
 PMELF_SRCS+=dmpehdr.c
+PMELF_SRCS+=dmpphdr.c
 PMELF_SRCS+=symtab.c
 PMELF_SRCS+=findsymhdrs.c
 PMELF_SRCS+=shtab.c
 PMELF_SRCS+=getgrp.c
 PMELF_SRCS+=getscn.c
+PMELF_SRCS+=getrel.c
 PMELF_SRCS+=getsym.c
 PMELF_SRCS+=putsym.c
 PMELF_SRCS+=putdat.c
 PMELF_SRCS+=getshdr.c
+PMELF_SRCS+=getphdr.c
 PMELF_SRCS+=putshdr.c
 PMELF_SRCS+=getehdr.c
 PMELF_SRCS+=putehdr.c
